--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
     <div class="container">
       <a class="navbar-brand text-primary fw-bold" href="#">
-        <img src="/image/astourlogo.png" alt="ASTours Logo" class="logo">
+        <img src="./image/astourlogo.png" alt="ASTours Logo" class="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
