--- a/index.html
+++ b/index.html
@@ -183,9 +183,15 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 ASTours International. All Rights Reserved.</p>
-    <p><i class="fas fa-globe"></i> Designed with love for travel.</p>
-  </footer>
+  <p>&copy; 2025 ASTours International. All Rights Reserved.</p>
+  <p>
+    <i class="fas fa-globe"></i> Designed by 
+    <a href="https://solo2ceo.info" target="_blank" rel="noopener noreferrer">
+      Solo2CEO
+    </a>
+  </p>
+</footer>
+
 
   <!-- WhatsApp -->
   <a href="https://wa.me/919321892924?text=Hello%20ASTours%20International%20Team%2C%20I%20would%20like%20to%20know%20more%20about%20your%20packages." class="whatsapp-float" target="_blank">
