added logo and bg image

--- a/cd.html
+++ b/cd.html
@@ -41,7 +41,7 @@
         
         /* Hero Background - Placeholder Image with Dark Overlay */
         .hero-bg {
-            background-image: url('AS-Tours-International/image/packagebgimage.avif');
+            background-image: url('image/packagebgimage.avif');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -90,7 +90,7 @@
             <div class="flex justify-between items-center h-24"> 
                 <!-- Logo -->
                 <a href="#home" class="flex items-center space-x-2">
-                    <img src="AS-Tours-International/image/astourlogo.png" 
+                    <img src="image/astourlogo.png" 
                          alt="ASTOURS INTERNATIONAL Logo" 
                          class="h-14 w-auto object-contain"
                          onerror="this.style.display='none';">
