added Client Visa Global

--- a/visa/visaservices.html
+++ b/visa/visaservices.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Visa Services | ASTours International</title>
+  <title>Visa Services | AS Tours International</title>
   <link rel="icon" type="image/png" href="/image/astourlogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -185,7 +185,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
     <a class="navbar-brand" href="/index.html">
-      <img src="/image/astourlogo.png" alt="ASTours Logo">
+      <img src="/image/astourlogo.png" alt="AS Tours Logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -193,8 +193,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-        <!-- <li class="nav-item"><a class="nav-link" href="/index.html#services">Services</a></li> -->
-        <li class="nav-item"><a class="nav-link" href="globalvisa.html#destinations">Global_Visa</a></li>
+        <li class="nav-item"><a class="nav-link" href="../templates/Travel/b2b/Visa/clientvisaquotations.html">Global Visa</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="globalvisa.html#destinations">Global_Visa</a></li> -->
         <li class="nav-item"><a class="nav-link" href="/packages/packages.html">Packages</a></li>
         <li class="nav-item"><a class="nav-link active fw-bold" href="#">Visa</a></li>
         <li class="nav-item"><a class="nav-link" href="/templates/contact.html">Contact</a></li>
@@ -206,7 +206,7 @@
 <!-- Hero -->
 <section class="hero">
   <h1>Visa Services</h1>
-  <p>Quickly access visa information for any country and apply through ASTours International</p>
+  <p>Quickly access visa information for any country and apply through AS Tours International</p>
 </section>
 
 <!-- Visa Assistance Dropdown -->
@@ -238,7 +238,7 @@
   <div class="grid">
     <div class="card">
       <div class="card-content">
-        <p>"Super fast service for my UK visa — got it in less than a week! Highly recommend ASTours International."</p>
+        <p>"Super fast service for my UK visa — got it in less than a week! Highly recommend AS Tours International."</p>
         <h3>- Ramesh P.</h3>
       </div>
     </div>
@@ -250,7 +250,7 @@
     </div>
     <div class="card">
       <div class="card-content">
-        <p>"ASTours handled my Schengen visa application perfectly. Seamless process from start to finish."</p>
+        <p>"AS Tours handled my Schengen visa application perfectly. Seamless process from start to finish."</p>
         <h3>- Arvind S.</h3>
       </div>
     </div>
@@ -290,7 +290,7 @@
 
 <!-- Footer -->
 <footer>
-  &copy; 2025 ASTours International | Designed by 
+  &copy; 2025 AS Tours International | Designed by 
   <a href="https://solo2ceo.info" target="_blank" style="color: #0077b6; text-decoration: none;">Solo2Ceo</a>
 </footer>
 
