--- a/visa/visaservices.html
+++ b/visa/visaservices.html
@@ -109,9 +109,9 @@
         <nav class="hidden lg:flex items-center gap-8 text-[#07203a]">
           <a href="../index.html" class="hover:text-[#d4af37]">Home</a>
         <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa</a>
-        <a href="../packages/packages.html" class="hover:text-[#d4af37]">Packages</a>
+        <!-- <a href="../packages/packages.html" class="hover:text-[#d4af37]">Packages</a> -->
         <a href="#" class="text-[#d4af37] font-bold">Visa Services</a>
-        <a href="../templates/contact.html" class="hover:text-[#d4af37]">Contact</a>
+        <!-- <a href="../templates/contact.html" class="hover:text-[#d4af37]">Contact</a> -->
         <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
         </nav>
 
@@ -129,9 +129,9 @@
         <div class="h-16"></div> 
         <a href="../index.html" class="hover:text-[#d4af37]">Home</a>
         <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa</a>
-        <a href="../packages/packages.html" class="hover:text-[#d4af37]">Packages</a>
+        <!-- <a href="../packages/packages.html" class="hover:text-[#d4af37]">Packages</a> -->
         <a href="#" class="text-[#d4af37] font-bold">Visa Services</a>
-        <a href="../templates/contact.html" class="hover:text-[#d4af37]">Contact</a>
+        <!-- <a href="../templates/contact.html" class="hover:text-[#d4af37]">Contact</a> -->
         <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
       </div>
     </div>
