--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AS Tours International — Luxury Travel & Visa</title>
+  <link rel="icon" type="image/png" href="image/astourlogo.png">
   <meta name="description" content="AS Tours International — bespoke luxury travel planning, visa facilitation, and B2B travel solutions." />
 
   <!-- Tailwind CDN -->
@@ -321,13 +322,13 @@
         <!-- Desktop Nav -->
         <nav class="hidden lg:flex items-center gap-8 text-sm font-medium">
           <a href="#home" class="hover:underline text-slate-800">Home</a>
-          <a href="../packages/packages.html" class="hover:underline">Packages</a>
-          <a href="/visa/visaservices.html" class="hover:underline">Visa Services</a>
+          <a href="packages/packages.html" class="hover:underline">Packages</a>
+          <a href="visa/visaservices.html" class="hover:underline">Visa Services</a>
           <a href="templates/Travel/About.html" class="hover:underline">Why Choose Us</a>
-          <a href="/templates/Travel/Customerreview.html" class="hover:underline">Testimonials</a>
-          <a href="/templates/Blog.html" class="hover:underline">News</a>
+          <a href="templates/Travel/Customerreview.html" class="hover:underline">Testimonials</a>
+          <a href="templates/Blog.html" class="hover:underline">News</a>
           <!-- <a href="#reviews" class="hover:underline">Carrier</a> -->
-          <a href="#contact" class="hover:underline">Contact</a>
+          <a href="templates/contact.html" class="hover:underline">Contact</a>
 
           <a href="templates/Travel/b2b/Visa/b2b.html" class="ml-2 inline-flex items-center gap-2 px-4 py-2 rounded-full text-sm border border-transparent btn-gold">Partner with Us</a>
         </nav>
@@ -347,19 +348,16 @@
     <br>
     <br>
     <!-- <a href="#home" class="block text-slate-800 hover:underline text-base font-medium">Home</a> -->
-    <a href="#home" class="block text-slate-800 hover:underline text-base font-medium">Home</a>
-    <a href="/templates/Blog.html" class="block text-slate-800 hover:underline text-base font-medium">News</a>
-    <a href="../packages/packages.html" class="block text-slate-800 hover:underline text-base font-medium">Packages</a>
-    <a href="/visa/visaservices.html" class="block text-slate-800 hover:underline text-base font-medium">Visa Services</a>
-    <a href="templates/Travel/About.html" class="block text-slate-800 hover:underline text-base font-medium">Why Choose Us</a>
-    <a href="/templates/Travel/Customerreview.html" class="block text-slate-800 hover:underline text-base font-medium">Testimonials</a>
-    <a href="#contact" class="block text-slate-800 hover:underline text-base font-medium">Contact</a>
-    
-    <!-- Partner Button -->
-    <a href="templates/Travel/b2b/Visa/b2b.html" 
-       class="mt-3 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-full text-sm font-semibold border border-transparent btn-gold hover:shadow-lg transition">
-       Partner with Us
-    </a>
+          <a href="#home" class="hover:underline text-slate-800">Home</a>
+          <a href="packages/packages.html" class="hover:underline">Packages</a>
+          <a href="visa/visaservices.html" class="hover:underline">Visa Services</a>
+          <a href="templates/Travel/About.html" class="hover:underline">Why Choose Us</a>
+          <a href="templates/Travel/Customerreview.html" class="hover:underline">Testimonials</a>
+          <a href="templates/Blog.html" class="hover:underline">News</a>
+          <!-- <a href="#reviews" class="hover:underline">Carrier</a> -->
+          <a href="templates/contact.html" class="hover:underline">Contact</a>
+
+          <a href="templates/Travel/b2b/Visa/b2b.html" class="ml-2 inline-flex items-center gap-2 px-4 py-2 rounded-full text-sm border border-transparent btn-gold">Partner with Us</a>
   </div>
 </div>
   </header>
@@ -1082,10 +1080,10 @@ contactForm.addEventListener('submit', async (e) => {
     </p>
 
     <div class="flex gap-4">
-        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-gold hover:text-navy transition-colors">
+        <a href="https://www.facebook.com/share/1AQsFHVnPQ/" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-gold hover:text-navy transition-colors">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-gold hover:text-navy transition-colors">
+        <a href="https://www.instagram.com/astoursinternational/?utm_source=qr&igsh=MTNhMnhqOHZscnoxMQ%3D%3D#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-gold hover:text-navy transition-colors">
             <i class="fab fa-instagram"></i>
         </a>
         <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-gold hover:text-navy transition-colors">
