modified:   index.html         modified:   templates/Travel/b2b/Partnersreferrals.html         modified:   templates/Travel/b2b/Visa/b2b.html         modified:   templates/Travel/b2b/Visa/clientvisaquotations.html         modified:   visa/visaservices.htm

--- a/visa/visaservices.html
+++ b/visa/visaservices.html
@@ -152,11 +152,11 @@
                 Important Update!
             </h2>
             <p class="text-gray-600 mb-6">
-                Our **new competitive visa rates** are now available. Click below to view the updated quotations.
+                Our Latest <strong>Promotional Visa Pricing</strong> are now available. Click below to view the updated quotations.
             </p>
 
             <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="btn-gold px-8 py-3 rounded-lg shadow-xl text-lg w-full">
-                View New Visa Rates
+                View All Visa Rates
             </a>
             
             <p class="text-xs text-gray-400 mt-4">
@@ -178,7 +178,7 @@
 
                 <nav class="hidden lg:flex items-center gap-8 text-[#07203a]">
                     <a href="../index.html" class="hover:text-[#d4af37]">Home</a>
-                    <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa</a>
+                    <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa Price</a>
                     <a href="#" class="text-[#d4af37] font-bold">Visa Services</a>
                     <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
                 </nav>
