--- a/index.html
+++ b/index.html
@@ -383,6 +383,54 @@
 }
 </style>
 
+<!-- #Install app button style -->
+ <style>
+  .install-banner {
+    /* Styles for the banner container */
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* To position the close button */
+    background-color: #f0f0f0; /* Light background for the whole banner */
+    padding: 10px;
+    border-radius: 8px;
+    margin: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative; /* Needed for absolute positioning of close button */
+}
+
+/* You can keep your existing button styles, adjusted to a class */
+.install-button {
+    background-color: rgb(0, 123, 255);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.close-button {
+    /* Styles for the close button (the 'X') */
+    background: none;
+    border: none;
+    color: #333;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 5px;
+    line-height: 1; /* Helps center the 'X' */
+    margin-right: 10px;
+    opacity: 0.6;
+    transition: opacity 0.2s;
+}
+
+.close-button:hover {
+    opacity: 1;
+}
+ </style>
+
 </head>
 <body class="antialiased">
     <div id="visaRateRibbonContainer">
@@ -405,12 +453,15 @@
     </div>
 
     <!-- PWA INSTALL BUTTON -->
-     <!-- Custom PWA Install Button -->
-    <button id="installButton" style="display:none; background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; margin: 15px;">
-        <i class="fa-solid fa-download"></i> Install App
-    </button>
-    <!-- PWA Installation Logic Script (MOVE THIS TO THE ABSOLUTE END) -->
-<script src="./pwa-install.js"></script>
+     <div id="installBanner" class="install-banner">
+          <button id="closeButton" class="close-button" aria-label="Dismiss install prompt">
+              &times;
+          </button>
+          <button id="installButton" class="install-button">
+              <svg class="svg-inline--fa fa-download" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M480 352h-133.5l-45.25 45.25C289.2 409.3 273.1 416 256 416s-33.16-6.656-45.25-18.75L165.5 352H32c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h448c17.67 0 32-14.33 32-32v-96C512 366.3 497.7 352 480 352zM432 456c-13.2 0-24-10.8-24-24c0-13.2 10.8-24 24-24s24 10.8 24 24C456 445.2 445.2 456 432 456zM233.4 374.6C239.6 380.9 247.8 384 256 384s16.38-3.125 22.62-9.375l128-128c12.49-12.5 12.49-32.75 0-45.25c-12.5-12.5-32.76-12.5-45.25 0L288 274.8V32c0-17.67-14.33-32-32-32C238.3 0 224 14.33 224 32v242.8L150.6 201.4c-12.49-12.5-32.75-12.5-45.25 0c-12.49 12.5-12.49 32.75 0 45.25L233.4 374.6z"></path></svg>
+              Install App
+          </button>
+      </div>
 
   <!-- NAVIGATION -->
   <header class="relative top-0 z-50 bg-white/95 backdrop-blur-md shadow-sm">
