corrected links & Mobile View and Install ap

--- a/visa/visaservices.html
+++ b/visa/visaservices.html
@@ -169,7 +169,7 @@
             <div class="flex items-center justify-between h-20">
 
                 <div class="absolute top-0 left-4 lg:left-8 z-50">
-                    <a href="/index.html" class="logo-badge">
+                    <a href="../index.html" class="logo-badge">
                         <img src="../image/astourlogo.png" alt="AS Tours Logo">
                     </a>
                 </div>
@@ -177,9 +177,8 @@
                 <div class="hidden lg:block w-32 flex-shrink-0"></div>
 
                 <nav class="hidden lg:flex items-center gap-8 text-[#07203a]">
-                    <a href="../index.html" class="hover:text-[#d4af37]">Home</a>
+                    <a href="#" class="text-[#d4af37] font-bold">Home</a>
                     <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa Price</a>
-                    <a href="#" class="text-[#d4af37] font-bold">Visa Services</a>
                     <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
                 </nav>
 
@@ -194,10 +193,9 @@
 
         <div id="mobileMenu" class="hidden lg:hidden bg-white border-t border-gray-200 absolute w-full shadow-lg">
             <div class="flex flex-col px-6 py-6 space-y-4 text-[#07203a] font-medium">
-                <div class="h-16"></div> 
-                <a href="../index.html" class="hover:text-[#d4af37]">Home</a>
+                <div class="h-10"></div> 
+                <a href="#" class="text-[#d4af37] font-bold">Home</a>
                 <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[#d4af37]">Global Visa</a>
-                <a href="#" class="text-[#d4af37] font-bold">Visa Services</a>
                 <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
             </div>
         </div>
