--- a/packages/packages.html
+++ b/packages/packages.html
@@ -32,16 +32,16 @@
         
         /* --- Navbar Component Styles (copied from previous luxury theme) --- */
         .logo-badge {
-            height: 60px; 
-            width: 60px;
+            height: 140px; 
+            width: 140px;
             background-color: #ffd700;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.3s ease;
-            border-bottom-right-radius: 6px;
-            border-bottom-left-radius: 6px;
+            /* border-bottom-right-radius: 6px; */
+            /* border-bottom-left-radius: 6px; */
         }
         .logo-badge img {
             width: 85%;
@@ -268,9 +268,9 @@
                 <div class="w-16 lg:w-36 flex-shrink-0"></div>
 
                 <nav class="hidden lg:flex items-center gap-8 text-[--navy] font-medium text-sm">
-                    <a href="../index.html" class="hover:text-[--gold] transition-colors">Home</a>
+                    <a href="#" class="text-[#d4af37] font-bold">Home</a>
                     <a href="../visa/visaservices.html" class="hover:text-[--gold] transition-colors">Visa</a>
-                    <a href="#" class="text-[--gold] font-bold border-b-2 border-[--gold]">Packages</a>
+                    <!-- <a href="#" class="text-[--gold] font-bold border-b-2 border-[--gold]">Packages</a> -->
                     <!-- <a href="../templates/Travel/About.html" class="hover:text-[--gold] transition-colors">About</a> -->
                     <a href="../templates/contact.html" class="hover:text-[--gold] transition-colors">Contact</a>
                     <a href="../templates/Travel/b2b/Visa/b2b.html" class="ml-4 px-6 py-2.5 rounded-full btn-gold shadow-md">Partner with Us</a>
@@ -287,9 +287,10 @@
 
         <div id="mobileMenu" class="hidden lg:hidden bg-white border-t border-gray-200 absolute w-full shadow-lg z-40">
             <div class="flex flex-col px-6 py-6 space-y-4 text-[--navy] font-medium">
-                <div class="h-8"></div> <a href="../index.html" class="hover:text-[--gold]">Home</a>
-                <a href="../visa/visaservices.html" class="hover:text-[--gold]">Visa</a>
-                <a href="#" class="text-[--gold] font-bold">Packages</a>
+                <br>
+                <a href="#" class="text-[#d4af37] font-bold">Home</a>
+                <a href="../templates/Travel/b2b/Visa/clientvisaquotations.html" class="hover:text-[--gold]">Visa</a>
+                <!-- <a href="#" class="text-[--gold] font-bold">Packages</a> -->
                 <!-- <a href="../templates/Travel/About.html" class="hover:text-[--gold]">About</a> -->
                 <a href="../templates/contact.html" class="hover:text-[--gold]">Contact</a>
                 <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
