proper the link and page navbar

--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@
     <br>
     <br>
           <a href="#" class="text-[#d4af37] font-bold">Home</a>
-          <a href="packages/packages.html" class="hover:underline">Packages</a>
-          <a href="visa/visaservices.html" class="hover:underline">Visa Services</a>
-          <a href="templates/Travel/About.html" class="hover:underline">Why Choose Us</a>
-          <a href="templates/Travel/Customerreview.html" class="hover:underline">Testimonials</a>
-          <a href="templates/Blog.html" class="hover:underline">News</a>
+          <a href="packages/packages.html" class="hover:text-[#d4af37]">Packages</a>
+          <a href="visa/visaservices.html" class="hover:text-[#d4af37]">Visa Services</a>
+          <a href="templates/Travel/About.html" class="hover:text-[#d4af37]">Why Choose Us</a>
+          <a href="templates/Travel/Customerreview.html" class="hover:text-[#d4af37]">Testimonials</a>
+          <a href="templates/Blog.html" class="hover:text-[#d4af37]">News</a>
           <!-- <a href="#reviews" class="hover:underline">Carrier</a> -->
-          <a href="templates/contact.html" class="hover:underline">Contact</a>
+          <a href="templates/contact.html" class="hover:text-[#d4af37]">Contact</a>
 
           <a href="templates/Travel/b2b/Visa/b2b.html" class="ml-2 inline-flex items-center gap-2 px-4 py-2 rounded-full text-sm border border-transparent btn-gold">Partner with Us</a>
   </div>
